# qwen-mj

./: .gitignore  README.md  pyproject.toml  requirements-rules.txt  requirements-training.txt
docs/: environment.md  testing.md
src/qwen_mj/: __init__.py  benchmark.py  cli.py  dataset_validation.py  encoding.py  environment.py  experiment.py  inference.py  match.py  rollout.py  rules.py  train_rl.py  train_sft.py  training_data.py  types.py
tests/: test_environment.py  test_rules_adapter.py  test_smoke.py
