[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-mj"
version = "0.1.0"
description = "Qwen3.5-4B mahjong self-play experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
rules = [
  "pymahjong @ git+https://github.com/MitsuhiroTaniguchi/pymahjong",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

